--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "^5.0.1",
+    "vite-test": "^0.4.0",
+    "w3c-hr-time": "^1.0.2",
     "web-vitals": "^3.1.1"
   },
   "devDependencies": {
